# cargo-fuzz target for the layered TOML parser and profile-ceiling merge
# invariants (§30.4). Detached from the parent workspace so normal workspace
# builds carry no fuzzing dependencies.
[package]
name = "oraclemcp-config-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1", features = ["derive"] }
libfuzzer-sys = "0.4"

[dependencies.oraclemcp-config]
path = ".."

[[bin]]
name = "config_toml"
path = "fuzz_targets/config_toml.rs"
test = false
doc = false
bench = false

[workspace]
